<resources>
    <string name="app_name">Smart Gadget</string>
    <string name="app_platform">for Android</string>
    <string name="user_name_database">smartgadget.db</string>
    <string name="user_name_database_test">smartgadget_test.db</string>
    <string name="history_database">history_smartgadget.db</string>
    <string name="history_database_test">history_smartgadget_test.db</string>
    <string name="title_page_dashboard">Dashboard</string>
    <string name="title_page_comfort_zone">Comfort Zone</string>
    <string name="title_page_device_management">Device Scan</string>
    <string name="title_page_history">History</string>
    <string name="title_page_glossary">Glossary</string>
    <string name="title_page_settings">Settings</string>
    <string name="tab_icon_description">Tab icon</string>
    <string name="header_connections">Connections</string>
    <string name="header_user_prefs">User Preferences</string>
    <string name="header_app_information">App Information</string>
    <string name="label_smart_gadgets">Smart Gadgets</string>
    <string name="label_season">Season</string>
    <string name="label_temperature_unit">Temperature Unit</string>
    <string name="label_glossary">Glossary</string>
    <string name="label_application_requirements">Application Requirements</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_about">About the App</string>
    <string-array name="array_temp_unit">
        <item>@string/unit_celsius</item>
        <item>@string/unit_fahrenheit</item>
    </string-array>
    <string name="pref_temp_unit_default">@string/unit_celsius</string>
    <string name="label_season_summer">Summer</string>
    <string name="label_season_winter">Winter</string>
    <string-array name="array_season">
        <item>@string/label_season_summer</item>
        <item>@string/label_season_winter</item>
    </string-array>
    <string name="pref_season_default">@string/label_season_summer</string>
    <string name="txt_about_char_copyright">\u00A9</string>
    <string name="about_sensirion_ag">Copyright Sensirion AG, Switzerland</string>
    <string name="label_devicescan">SmartGadget Scan</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_stop">Stop</string>
    <string name="label_advertised_name">Type\u003A\u0020</string>
    <string name="label_connected">Connected</string>
    <string name="label_disconnected">Disconnected</string>
    <string name="label_listitem_rssi">"\u0028RSSI\u0029\u003A\u0020"</string>
    <string name="title_button_choice">Choose what to show</string>
    <string name="text_zone_topleft">Rheumatic Pains</string>
    <string name="text_zone_topright">Heat Stroke</string>
    <string name="text_zone_bottomright">Dehydration</string>
    <string name="text_zone_bottomleft">Respiratory Problems</string>
    <string name="label_empty_t">\u002d\u002d\u002E\u002d \u00B0</string>
    <string name="label_empty_rh">\u002d\u002d\u002E\u002d \u0025</string>
    <string name="label_empty_heat_index">N.A.</string>
    <string name="unit_celsius">\u00B0C</string>
    <string name="unit_fahrenheit">\u00B0F</string>
    <string name="unit_humidity">\u0025</string>
    <string name="char_percent">\u0025</string>
    <string name="label_t">Temperature</string>
    <string name="label_rh">Humidity</string>
    <string name="label_dp">Dew point</string>
    <string name="label_hi">Heat index</string>
    <string name="text_sensor_name_default">no sensor</string>
    <string name="text_amb_temp_default">\u002D\u002D.\u002D \u00B0</string>
    <string name="text_rh_default">\u002D\u002D.\u002D \u0025</string>
    <string name="label_on">ON</string>
    <string name="label_off">OFF</string>
    <string name="ok">OK</string>
    <string name="got_it">Got it</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="desc_imgview_generic">dummy image description</string>
    <string name="label_download">Download</string>
    <string name="label_10_minutes">10 min</string>
    <string name="label_1_hour">1 hour</string>
    <string name="label_6_hours">6 hours</string>
    <string name="label_1_day">1 day</string>
    <string name="label_1_week">1 week</string>
    <string name="graph_label_domain_min">TIME elapsed (minutes)</string>
    <string name="graph_label_domain_hours">TIME elapsed (hours)</string>
    <string name="graph_label_domain_days">TIME elapsed (days)</string>
    <string name="graph_label_elapsed_time">TIME elapsed</string>
    <string name="graph_label_temperature">TEMPERATURE</string>
    <string name="graph_label_temperature_celsius">TEMPERATURE\u0020\u0028\u2103\u0029</string>
    <string name="graph_label_temperature_fahrenheit">TEMPERATURE\u0020\u0028\u2109\u0029</string>
    <string name="graph_label_humidity">HUMIDITY\u0020\u0028\u0025\u0029\u0020</string>
    <string name="graph_label_relative_humidity">RELATIVE HUMIDITY\u0020\u0028\u0025\u0029\u0020</string>
    <string name="label_details">Details</string>
    <string name="label_batteryLevel">Battery</string>
    <string name="label_battery_loading">Loading…</string>
    <string name="label_gadgetName">Gadget name</string>
    <string name="label_loggingInterval">Logging Interval</string>
    <string name="label_logging_interval_updating">Updating…</string>
    <string name="label_gadgetLogging">Logging</string>
    <string name="label_disconnect">Disconnect</string>
    <string name="label_downloading">Downloading </string>
    <string name="label_advice_logging_enable">Enabling logging discards all the data currently stored on the Smart Gadget. Do you want to continue?</string>
    <string name="label_advice_interval_modification">Modifying interval will delete all currently stored data.</string>
    <string name="label_interval_second_singular">1 second</string>
    <string name="label_interval_second_plural">seconds</string>
    <string name="label_interval_minute_singular">1 minute</string>
    <string name="label_interval_minute_plural">minutes</string>
    <string name="label_interval_hour_singular">1 hour</string>
    <string name="label_interval_hour_plural">hours</string>
    <string name="label_interval_1s">1 second</string>
    <string name="label_interval_10s">10 seconds</string>
    <string name="label_interval_1min">1 minute</string>
    <string name="label_interval_5min">5 minutes</string>
    <string name="label_interval_10min">10 minutes</string>
    <string name="label_interval_1h">1 hour</string>
    <string name="label_interval_3h">3 hours</string>
    <string-array name="array_interval_choices">
        <item>@string/label_interval_1s</item>
        <item>@string/label_interval_10s</item>
        <item>@string/label_interval_1min</item>
        <item>@string/label_interval_5min</item>
        <item>@string/label_interval_10min</item>
        <item>@string/label_interval_1h</item>
        <item>@string/label_interval_3h</item>
    </string-array>
    <string name="label_discovered">Discovered</string>
    <string name="label_scan_started">Stop scan</string>
    <string name="label_scan_stopped">Scan</string>
    <string name="label_address">Address\u003A\u0020</string>
    <string name="connected_device">Connected to device: %s</string>
    <string name="lost_connection_device">Lost connection to device: %s</string>
    <string name="connecting_title">Connecting …</string>
    <string name="confirmation_to_close_application">Do you want to close the application?</string>
    <string name="connecting_to_device_prefix">Connecting to the device with name: %s</string>
    <string name="interval_modification">Interval Modification</string>
    <string name="interval_modification_message">Modifying the interval will delete the data from the device. Do you want to continue?</string>
    <string name="enable_logging">Enable Logging?</string>
    <string name="inphone_rht_sensor">In-phone Sensor</string>
    <string name="manage_device_download_failed_retry">Failed… Retry</string>
    <string name="manage_device_download_no_data">No data available</string>
    <string name="label_gadgetdownload">Logged Data</string>
    <string name="manage_device_download_start">Starting download…</string>
    <string name="manage_device_download_progress">Downloading: %d%%</string>
    <string name="manage_device_download_completed">Download completed</string>
    <string name="requirements_title">Sensirion SmartGadget Required</string>
    <string name="requirements_text">This application requires a Sensirion SmartGadget in order to work.</string>
    <string name="requirements_url">https://www.sensirion.com/gadget/</string>
    <string name="requirements_show_next_launch">Show on next launch</string>
    <string name="policy_title">Privacy Policy</string>
    <string name="policy_text_1">Last update: March 15th, 2017\n\nSensirion AG designs products and tools that allow measuring and tracking of environmental data like temperature and humidity to provide users with insight about their environmental conditions. This privacy policy applies to the Sensirion Smart Gadget (“Device”) and the Sensirion Smart Gadget mobile application thereto (“App”).\n\nThe Device allows tracking of the environmental data temperature and humidity. These data are saved locally onto the Device. The Device has a Bluetooth Low Energy (BLE) module which – when switched on - allows other Bluetooth enabled devices in the vicinity to connect to the Device and show current measured values as well as download saved data.\n\nThe Sensirion App allows the user to connect a mobile phone or tablet to the Device and show current measured values as well as download saved data. In order to connect an Android mobile phone or tablet to a Device via BLE, Android demands turning on the location services and providing to the app access to location data. This is a general Android/BLE demand to allow scanning for nearby devices, independent of whether or not location data are used.</string>
    <string name="policy_text_2">Sensirion does not collect, use, save, track or share your location data in any form, nor does Sensirion collect, use, save, track or share other personal data through the App.</string>
    <string name="policy_text_contact_text">You can contact us for any questions or comments at:</string>
    <string name="policy_text_contact_email">info@sensirion.com</string>
    <string name="policy_url">https://www.sensirion.com/privacy-policy</string>
    <string name="scanning_help_title">Can\'t find your gadget?</string>
    <string name="scanning_help_bullet_point">-</string>
    <string name="scanning_help_proximity_title">Get close to your Smart Gadget</string>
    <string name="scanning_help_proximity_description">Make sure to be in close proximity of your Smart Gadget.</string>
    <string name="scanning_help_gadget_ble_title">Enable BLE on the SmartGadget</string>
    <string name="scanning_help_gadget_ble_description">To enable BLE on the Smart Gadget, press and hold the button on the gadget for 3 seconds.</string>
    <string name="scanning_help_location_title">Enable location services</string>
    <string name="scanning_help_location_description">Android requires location permissions to scan for BLE devices. The application does not use or track your location.</string>
    <string name="scanning_help_pairing_title">Let this app pair with the Smart Gadget</string>
    <string name="scanning_help_pairing_description">To ensure seamless functionality, do not use the system\'s bluetooth settings to pair.</string>
    <string name="dialog_unbind_gadget_title">Inconsistent pairing state</string>
</resources>