<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:scaleType="center"
            android:text="@string/policy_text_1"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:scaleType="center"
            android:text="@string/policy_text_2"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:text="@string/policy_text_contact_text"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autoLink="email"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/policy_text_contact_email"
            android:textColor="@color/sensirion_green"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoLink="web"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:scaleType="center"
            android:text="@string/policy_url"
            android:textColor="@color/sensirion_green"
            android:textSize="@dimen/text_default"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="16dp"
            android:background="@color/background_light"/>

        <Button
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_dialog"
            android:clickable="true"
            android:text="@string/got_it"
            android:textSize="14sp"/>

    </LinearLayout>
</ScrollView>