<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/scan_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <ScrollView
        android:id="@+id/scanning_info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scanning_help_title"
                android:textColor="@color/sensirion_green_darkened"
                android:textSize="@dimen/dashboard_connected_peripheral_item_text_size"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/layout_enable_ble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dashboard_button_margin_top">

                <TextView
                    android:id="@+id/dash_ble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanning_help_bullet_point"
                    android:textSize="@dimen/scan_device_address_text_size"/>

                <TextView
                    android:id="@+id/enable_ble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/dash_ble"
                    android:text="@string/scanning_help_proximity_title"
                    android:textSize="@dimen/scan_device_address_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/enable_ble"
                    android:layout_below="@+id/enable_ble"
                    android:text="@string/scanning_help_proximity_description"
                    android:textSize="@dimen/scan_device_info_text_size"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_enable_gadget_ble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dashboard_button_margin_top">

                <TextView
                    android:id="@+id/dash_gadget_ble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanning_help_bullet_point"
                    android:textSize="@dimen/scan_device_address_text_size"/>

                <TextView
                    android:id="@+id/enable_gadget_ble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/dash_gadget_ble"
                    android:text="@string/scanning_help_gadget_ble_title"
                    android:textSize="@dimen/scan_device_address_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/enable_gadget_ble"
                    android:layout_below="@+id/enable_gadget_ble"
                    android:text="@string/scanning_help_gadget_ble_description"
                    android:textSize="@dimen/scan_device_info_text_size"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_enable_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dashboard_button_margin_top">

                <TextView
                    android:id="@+id/dash_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanning_help_bullet_point"
                    android:textSize="@dimen/scan_device_address_text_size"/>

                <TextView
                    android:id="@+id/enable_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/dash_location"
                    android:text="@string/scanning_help_location_title"
                    android:textSize="@dimen/scan_device_address_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/enable_location"
                    android:layout_below="@+id/enable_location"
                    android:text="@string/scanning_help_location_description"
                    android:textSize="@dimen/scan_device_info_text_size"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_pairing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dashboard_button_margin_top">

                <TextView
                    android:id="@+id/dash_pairing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanning_help_bullet_point"
                    android:textSize="@dimen/scan_device_address_text_size"/>

                <TextView
                    android:id="@+id/pairing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/dash_pairing"
                    android:text="@string/scanning_help_pairing_title"
                    android:textSize="@dimen/scan_device_address_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/pairing"
                    android:layout_below="@+id/pairing"
                    android:text="@string/scanning_help_pairing_description"
                    android:textSize="@dimen/scan_device_info_text_size"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>