<?xml version="1.0" encoding="utf-8"?><!--
/*
** Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preference_fragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:clickable="false"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent"
        android:clickable="true"
        android:clipToPadding="false"
        android:drawSelectorOnTop="false"
        android:paddingBottom="@dimen/preference_fragment_padding_bottom"
        android:paddingLeft="@dimen/preference_fragment_padding_side"
        android:paddingRight="@dimen/preference_fragment_padding_side"
        android:paddingTop="7dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="@integer/preference_fragment_scrollbarStyle" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:padding="@dimen/preference_fragment_padding_side"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/button_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:visibility="gone">

        <Button
            android:id="@+id/back_button"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dip"
            android:text="@string/back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/skip_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/skip"
                android:visibility="gone" />

            <Button
                android:id="@+id/next_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/next" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>